# obsidx

./: Cargo.toml  schema.json
docs/: COMPETITORS-qmd.md  EMBEDDING-MODELS.md  INSTALL-vss.md  PLAN-chunk-diffing.md  PLAN-collections.md  PLAN-mcp-stdio.md  PLAN-multi-get-docids.md  PLAN-ort-embeddings.md  PLAN-query-expansion.md  PLAN-search-filters.md  PLAN-sqlite-vss.md  ROADMAP.md
src/: main.rs
tools/: obsidx.tool.json
