[package]
name = "obsidx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
pulldown-cmark = "0.12"
tantivy = "0.22"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
notify = "6"

